--- a/chess/src/components/style.scss
+++ b/chess/src/components/style.scss
@@ -1,4 +1,8 @@
 @import "./variables.scss";
+* {
+  box-sizing: border-box;
+}
+
 .body {
   background-color: $dark-yellow;
 }
@@ -147,8 +151,17 @@
   transform: rotate(180deg);
 }
 
-.chess_row {
+.row {
   display: flex;
+}
+
+.cell {
+  width: 10vh;
+  height: 10vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .chess_cell {
@@ -296,9 +309,11 @@
 }
 
 .chess__figure {
-  width: 100%;
+  width: 50%;
   height: 100%;
-  background-size: cover;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .avatar {
@@ -317,4 +332,66 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.row {
+  display: flex;
+}
+
+.cell {
+  width: 10vh;
+  height: 10vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.current {
+  background-color: aqua;
+}
+
+.cell__allowed::before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #ccc;
+  opacity: 0.7;
+}
+
+.cell__light {
+  background-color: #f0f0f0;
+}
+
+.cell__dark {
+  background-color: #85CDCA;
+}
+
+.cell__allowed {
+  border: solid 3px rgb(255, 58, 58);
+}
+
+.cell__selected {
+  border: solid 3px #000;
+}
+
+.cell__figureBlack {
+  color: #000;
+}
+
+.cell__figureWhite {
+  color: #fff;
+}
+
+.cell__check {
+  background-color: rgb(187, 4, 4);
+}
+
+.chess_fig {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
 }
