--- a/packages/chess-client/src/app/components/style.scss
+++ b/packages/chess-client/src/app/components/style.scss
@@ -588,7 +588,7 @@
   }
 }
 .lobby-icon {
-  background-image: url('../../assets/icons/white-queen.svg');
+  background-image: url('../../assets/icons/logo.svg');
 }
 .replay-icon {
   background-image: url('../../assets/icons/replay.svg');
